fix horizontal scroll

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -11,10 +11,6 @@ h1{
   font-weight: bold;
   font-size: $font-size-huge;
 }
-.container-fluid{
-  padding-left: 0;
-  padding-right: 0;
-}
 .navbar{
   border-radius: 0;
   margin-bottom: 0;
